Fixes MinIO after manual tests